--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+spring.jpa.database=mysql
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/challenge?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
