--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security' //스프링 시큐리티
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5' //로그인된 사용자 정보 가져오기
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	//implementation group: 'com.auth0', name: 'java-jwt', version: '3.18.1'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	//jwt
+	//implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+	//WebClient 사용 - http client
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
