--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,15 @@ dependencies {
 
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
+	implementation 'com.google.code.findbugs:jsr305:3.0.2' //nullable
 
-	compileOnly 'org.projectlombok:lombok'
+	implementation      'org.projectlombok:lombok'
+	testImplementation  'org.projectlombok:lombok'
+	annotationProcessor     'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//JUnit4 추가
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
