--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -5,7 +5,7 @@ spring:
         registration:
           kakao:
             client-id: b1e2e5b7129550c65635ecffe688d2dc #REST API 키
-            redirect-uri: http://localhost:8080/login/kakao #인가 코드가 리다이렉트된 URI
+            redirect-uri: http://localhost:8080/auth/kakao/callback #인가 코드가 리다이렉트된 URI
             client-authentication-method: POST
             client-secret: ovycgatXmy4CqR7cSdRSEi7SduUFNY69 #토큰 발급 시 보안 강화 위해 추가 확인하는 코드
             authorization-grant-type: authorization_code
