시큐리티 및 jwt 설정 재정리 (#65)
* 피드 조회 테스트

* 피드 내 다짐, 이모션 불러오기 테스트 완료

* 시큐리티 설정 확인 중

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
 	implementation 'com.google.code.findbugs:jsr305:3.0.2' //nullable
 
-	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA' //entityManagerFactor 빈 생성 지원
+	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA' //entityManagerFactory 빈 생성 지원
 
 	implementation      'org.projectlombok:lombok'
 	testImplementation  'org.projectlombok:lombok'
