--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/challenge?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: '0000'
+    password: 'yomi6031!'
 
     hikari:
       initialization-fail-timeout: 0 #커넥션 초기화 실패 시 유효성 검사 시도
@@ -18,7 +18,7 @@ spring:
       use-new-id-generator-mappings: false
       #show-sql: true  #설정시 JPA 쿼리문 확인 가능
     properties:
-      hibernate.format_sql: true  #Hibernate가 동작하면서 발생한 SQL의 가독성을 높여 줌
+      hibernate.format_sql: true  #Hibernate가 동작하면서 발생한 sql 의 가독성을 높여 줌//
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect  #DB 바꿀 시 이 설정만 바꿔주면 각 DB에 맞는 SQL 문법으로 바꿔 줌
 
 #로그 레벨 설정
