--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -4,7 +4,7 @@ spring:
     url: jdbc:mysql://localhost:3306/challenge?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
 
-    password: '0000'
+    password: '12345678'
 
 
     hikari:
