--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 NDaysChallengeFrontend/
+.elasticbeanstalk/
+build/
+src/main/resources/
 
 ### STS ###
 .apt_generated
