--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,9 +2,9 @@ server:
   port : 5000
 spring:
   jpa:
-    database: mysql
+    database: MYSQL
     show-sql: true
-    database-platform: org.hibernate.dialect.MYSQL8Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: update
   datasource:
