챌린지 상태 변경 로직 추가

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ NDaysChallengeFrontend/
 .elasticbeanstalk/
 build/
 src/main/resources/*
+src/main/resources/application-mysql.yml
 
 ### STS ###
 .apt_generated
