멤버 탈퇴 로직 수정 및 회원가입 유효성 검사 코드 추가 (#126)
* 오류로 인해 멤버엔티티 유니크 제약조건 임시 삭제

* 멤버 탈퇴 오류 해결 및 테스트 완료

* 회원가입 시 유효성 검사 및 아이디, 닉네임 중복 검사 코드 추가

--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/challenge?useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: '12345678'
+    password: '1234'
 
     hikari:
       initialization-fail-timeout: 0 #커넥션 초기화 실패 시 유효성 검사 시도
@@ -12,7 +12,7 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create #[create] [create-drop] [update] [validate] [none] 상황에 맞게 사용하기
+      ddl-auto: update #[create] [create-drop] [update] [validate] [none] 상황에 맞게 사용하기
       naming:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
       use-new-id-generator-mappings: false
