--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,15 @@ jobs:
         run: ./gradlew clean -x test build
         shell: bash
 
-      - name: Get current time
-        uses: 1466587594/get-current-time@v2
-        id: current-time
+      - name: Get current date
+        id: date
+        run: echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_STATE
         with:
-          format: YYYY-MM-DDTHH-mm-ss 
           utcOffset: "+09:00"
 
-      - name: Show Current Time
-        run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}" 
+      - name: Show current date
+        run: echo $TAG_NAME - $RELEASE_NAME
+        env:
+          TAG_NAME: nightly-tag-${{ env.date }}
+          RELEASE_NAME: nightly-release-${{ env.date }}
         shell: bash
