github action 오류 해결 중

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Get current date
         id: date
         run: | 
-          echo "builddate={$(date +'%Y-%m-%d')}" >> $GITHUB_STATE
+          echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_ENV
 
       - name: Generate deployment package
         run: |
@@ -50,6 +50,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: NDaysChallenge-backend-dev
           environment_name: PROD-NDC-API-SERVICE
-          version_label: github-action-${{ steps.version.outputs.builddate }}
+          version_label: github-action-${{ env.date }}
           region: us-west-2
           deployment_package: deploy/deploy.zip
