github action bad substitution 오류 해결 중

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         shell: bash
 
       - name: make application-prod.yml
+        if: contains(github.ref, 'develop')
         run: |
           cd ./src/main/resources
           touch ./application-prod.yml
@@ -37,6 +38,7 @@ jobs:
         shell: bash
 
       - name: make application.yml
+        if: contains(github.ref, 'develop')
         run: |
           cd ./src/main/resources
           touch ./application.yml
