--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Get current date
         id: version
         run: | 
-          echo "builddate=$(date +'%Y-%m-%dT%H:%M:%S -d "+9 hours" TZ=":Asia/Seoul"')" >> $GITHUB_OUTPUT
+          echo "builddate=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
 
       - name: Generate deployment package
         run: |
