--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -29,7 +29,20 @@ http {
   }
 
   server {
+      listen        443 ssl;
+      server_name       api.ndayschallenge.com;
+      
+      # Application configuration
+      location / {
+          proxy_pass http://127.0.0.1:5000;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+      }
+  }
+
+  server {
       listen        80 default_server;
+      listen        return 301 https://$host$request_url;
 
       location / {
           proxy_pass          http://springboot;
