--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -29,20 +29,7 @@ http {
   }
 
   server {
-      listen        443 ssl;
-      server_name       api.ndayschallenge.com;
-      
-      # Application configuration
-      location / {
-          proxy_pass http://127.0.0.1:5000;
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-      }
-  }
-
-  server {
       listen        80 default_server;
-      listen        return 301 https://$host$request_url;
 
       location / {
           proxy_pass          http://springboot;
@@ -64,6 +51,6 @@ http {
       gzip_comp_level       4;
 
       # Include the Elastic Beanstalk generated locations
-      include conf.d/elasticbeanstalk/healthd.conf;
+      #include conf.d/elasticbeanstalk/healthd.conf;
   }
 }
