--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -32,7 +32,7 @@ http {
       listen        80 default_server;
 
       location / {
-          proxy_pass          http://springboot;
+          proxy_pass          http://springboot:5000;
           proxy_http_version  1.1;
           proxy_set_header    Connection          $connection_upgrade;
           proxy_set_header    Upgrade             $http_upgrade;
