test: http test 코드 공통정보 파일 생성 및 변수 설정

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ NDaysChallengeFrontend/
 .elasticbeanstalk/
 build/
 src/main/resources/*
+http-client.private.env.json
 
 ### STS ###
 .apt_generated
