멤버, 다짐 도메인 수정 (#189)
* 기술적 고민 업데이트

기술적 고민 업데이트

* 시큐리티 쿠키 설정 복원 및 레포지토리 메소드 수정

* fix : 멤버 탈쾨 서비스 메소드 관심사 분리

* fix: MemberService 내 탈퇴 로직 관심사 분리(주석 풂)

* 기타 코드 정리

* fix: 다짐 도메인 수정(다짐 빈칸으로 작성 시 피드에 미포함, 다짐 업데이트 시 기존 이모션 초기화)

* 충돌 해결 및 기타 코드 정리

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
 
       - name: make application-prod.yml
-        if: contains(github.ref, 'main') || contains(github.ref, 'develop')
+        if: contains(github.ref, 'main')
         run: |
           cd ./src/main/resources
           touch ./application-prod.yml
