feat: 관리자 페이지 추가 메인, 메뉴, 챌린지 관리 페이지 추가

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ NDaysChallengeFrontend/
 .elasticbeanstalk/
 build/
 src/main/resources/*
+!src/main/resources/templates
+!src/main/resources/static
 http-client.private.env.json
 
 ### STS ###
