refactor: stamp 엔티티의 day 생성시 초기 값 변경 프론트 요구사항에 맞추어 초기값을 totalDays 값만큼 "u"로 넣어두게 설정. 스탬프 요청이 오면 "u"를 "o" 혹은 "x" 로 변경하도록 수정.

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'java'
 }
 
@@ -34,6 +41,9 @@ dependencies {
 	testImplementation  'org.projectlombok:lombok'
 	annotationProcessor     'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
 	runtimeOnly 'mysql:mysql-connector-java'
 
@@ -91,6 +101,23 @@ task('release') {
 	}
 
 }
+
+//querydsl 추가 시작
+def querydslDir = "$buildDir/generated/querydsl"
+querydsl {
+	jpa = true
+	querydslSourcesDir = querydslDir
+}
+sourceSets {
+	main.java.srcDir querydslDir
+}
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
+}
+//querydsl 추가 끝
 
 jar {
 	enabled = false
