엔티티 의존성 제거, 친구 검색 리팩토링, 테스트 오류 해결 (#200)
* 기술적 고민 업데이트

기술적 고민 업데이트

* 시큐리티 쿠키 설정 복원 및 레포지토리 메소드 수정

* fix : 멤버 탈쾨 서비스 메소드 관심사 분리

* fix: MemberService 내 탈퇴 로직 관심사 분리(주석 풂)

* 기타 코드 정리

* fix: 다짐 도메인 수정(다짐 빈칸으로 작성 시 피드에 미포함, 다짐 업데이트 시 기존 이모션 초기화)

* 충돌 해결 및 기타 코드 정리

* fix: 배포 브랜치 설정 변경

* fix : 시큐리티 어노테이션 수정 (배포 오류 원인 찾는 중)

* refactor : 로그인 사용자 정보 조회 방법 변경 및 회원정보 수정 유효성 검사 코드 추가

* 리드미 수정

* 엔티티-dto 변환 시 dto에 대한 엔티티 의존성 제거

* 테스트코드 오류 해결

* 친구 검색 유효성 검사 추가

--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	//보안
-//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security' //스프링 시큐리티
 	testImplementation 'org.springframework.security:spring-security-test'
 
@@ -70,7 +68,6 @@ dependencies {
 	implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
 }
 
 tasks.named('test') {
@@ -104,19 +101,31 @@ task('release') {
 
 //querydsl 추가 시작
 def querydslDir = "$buildDir/generated/querydsl"
+
 querydsl {
 	jpa = true
 	querydslSourcesDir = querydslDir
 }
+
 sourceSets {
 	main.java.srcDir querydslDir
 }
+
 configurations {
 	querydsl.extendsFrom compileClasspath
 }
+
 compileQuerydsl {
+	if(file(querydslDir).exists() )
+		delete(file(querydslDir))
 	options.annotationProcessorPath = configurations.querydsl
 }
+
+task deleteGeneratedSources(type: Delete) {
+	delete file(querydslDir)
+}
+
+tasks.withType(JavaCompile) { it.dependsOn('deleteGeneratedSources') }
 //querydsl 추가 끝
 
 jar {
