--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 	implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
 }
 
 tasks.named('test') {
