--- a/build.gradle
+++ b/build.gradle
@@ -77,30 +77,30 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-task('release') {
-	/* ./gradlew build를 먼저 실행하라는 뜻이다. */
-	dependsOn("build")
-
-	doLast {
-		def stdout = new ByteArrayOutputStream()
-		/* exec - 커맨드 라인 프로세서; 파워셸/터미널에서 실행하는 것과 같다. */
-		exec {
-			/* $eb setenv SPRING_PROFILES_ACTIVE=prod */
-			commandLine 'eb', 'setenv', 'SPRING_PROFILES_ACTIVE=prod'
-			standardOutput = stdout
-		}
-		/* 결과 로깅을 위한 작업 */
-		println "eb setenv SPRING_PROFILES_ACTIVE=prod :\n$stdout";
-		exec {
-			/* $eb deploy */
-			commandLine 'eb', 'deploy'
-			standardOutput = stdout
-		}
-		println "eb deploy :\n$stdout";
-		println "Release succeeded."
-	}
-
-}
+//task('release') {
+//	/* ./gradlew build를 먼저 실행하라는 뜻이다. */
+//	dependsOn("build")
+//
+//	doLast {
+//		def stdout = new ByteArrayOutputStream()
+//		/* exec - 커맨드 라인 프로세서; 파워셸/터미널에서 실행하는 것과 같다. */
+//		exec {
+//			/* $eb setenv SPRING_PROFILES_ACTIVE=prod */
+//			commandLine 'eb', 'setenv', 'SPRING_PROFILES_ACTIVE=prod'
+//			standardOutput = stdout
+//		}
+//		/* 결과 로깅을 위한 작업 */
+//		println "eb setenv SPRING_PROFILES_ACTIVE=prod :\n$stdout";
+//		exec {
+//			/* $eb deploy */
+//			commandLine 'eb', 'deploy'
+//			standardOutput = stdout
+//		}
+//		println "eb deploy :\n$stdout";
+//		println "Release succeeded."
+//	}
+//
+//}
 
 //querydsl 추가 시작
 def querydslDir = "$buildDir/generated/querydsl"
